Old Versions/v0.0.1/README.md
# Documentation d'installation

## Installation

- [Installez ArcGis Pro 2.5](https://pro.arcgis.com/fr/pro-app/get-started/install-and-sign-in-to-arcgis-pro.htm)
- Exécutez le fichier Arcgis-Pro-Isogeo.esriAddinX et validez
- Lancez ArcGis Pro et connectez-vous
- Allez dans la rubrique Complément (ou Add-In pour ceux ayant installé le logiciel en anglais)
- Cliquez sur l'icône "Plugin Isogeo"
- L'installation est finie

## Changer de langue

- Cliquez sur "Projet" sur la page principale du logiciel
- Cliquez sur Options
- Scrollez vers l'option "Langue"
- Vous pouvez choisir manuellement la langue en décochant l'option "Appairer à Microsoft Windows"

**A savoir :**

**Le plugin Isogeo supporte deux langues : Anglais et français.**  
**Toute autre langue que français selectionnée sera automatiquement définie comme anglais dans le plugin Isogeo**

## Changer de thème

- Cliquez sur "Projet" sur la page principale du logiciel
- Cliquez sur "Général"
- Cliquez sur "Thème d'application"
- Vous avez le choix entre light et dark
