Old Versions/v0.8.0/README.md
# Documentation d'installation

## Prérequis

- [Installez ArcGis Pro 2.5](https://pro.arcgis.com/fr/pro-app/get-started/install-and-sign-in-to-arcgis-pro.htm)
- [Installez le Framework .NET 4.8](https://dotnet.microsoft.com/download/dotnet-framework/net48)

## Installation

- Exécutez le fichier Isogeo.AddIn.esriAddinX et validez
- Lancez ArcGis Pro et connectez-vous
- Allez dans la rubrique Complément (ou Add-In pour ceux ayant installé le logiciel en anglais)
- Cliquez sur l'icône "Isogeo"
- L'installation est finie

## Changer de langue

- Cliquez sur "Projet" sur la page principale du logiciel
- Cliquez sur Options
- Scrollez vers l'option "Langue"
- Vous pouvez choisir manuellement la langue en décochant l'option "Appairer à Microsoft Windows"

**A savoir :**

**Le plugin Isogeo supporte deux langues : anglais et français.**  
**Toute autre langue que français selectionnée sera automatiquement définie comme anglais dans le plugin Isogeo**

## Changer de thème

- Cliquez sur "Projet" sur la page principale du logiciel
- Cliquez sur "Général"
- Cliquez sur "Thème d'application"
- Vous avez le choix entre clair (light) et foncé (dark)
